# maf-workshop

./: .env.example  .gitignore  README.md  pyproject.toml
notebooks/: 01-hello-agent.ipynb  02-function-tools.ipynb  03-structured-output.ipynb  04-multi-turn-conversations.ipynb  05-agent-as-tool.ipynb  06-middleware.ipynb  07-workflows-intro.ipynb  08-multi-agent-orchestration.ipynb  09-mcp-with-agents.ipynb  10-hosting-microsoft-agent-api.ipynb
