[project]
name = "microsoft-agents-framework-walkthrough"
version = "0.1.0"
description = "A bite-sized intro course on Microsoft Agent Framework for Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agent-framework>=1.0.0rc5",
    "azure-identity>=1.19.0",
    "python-dotenv>=1.1.0",
    "pydantic>=2.0,<2.13",
    "ipykernel>=6.29"
]

[tool.uv]
prerelease = "allow"
